--- a/static/css/homeRollingHome.css
+++ b/static/css/homeRollingHome.css
@@ -1,6 +1,9 @@
 #DalianJunda{
 	overflow: hidden;
 	position: relative;
+    border-top: 10px solid green;
+    border-bottom: 3px solid green;
+
 }
 
 #DalianJunda img{
@@ -46,7 +49,7 @@
 
 	position:absolute;
 	right:0;
-	bottom:0;
+	top:0;
 	width: auto;
 	height: auto;
 	min-width: 100%;
@@ -70,15 +73,17 @@
  }
 /* The Forth Layer of Home: Hire */
 
-#HomeForthHire{
-	background:green;opacity: 0.95;
+#HomeForHire{
+	background:green;
+	opacity: 0.95;
 	width:100%; 
 	min-height:40vh;
 	height:auto;
 	padding-bottom: 5%;
+	margin-bottom: -4px;
 }
 
-#HomeForthHire li{
+#HomeForHire li{
 
 	list-style: none;
 	color:white;
