--- a/templates/HomePage/Home.html
+++ b/templates/HomePage/Home.html
@@ -7,7 +7,7 @@
 		<script src="{% static 'HomePage/js/Plugin/jQuery.js' %}"></script> 		
 		<script src="{% static 'HomePage/js/Plugin/headroom.js' %}"></script> 
 		<script src="{% static 'HomePage/js/Plugin/jQuery.headroom.js' %}"></script> 
-		<script type="text/javascript" src="{% static 'HomePage/js/articles.js' %}"></script> 
+		<script type="text/javascript" src="{% static 'HomePage/js/keyableSideBar.js' %}"></script> 
 		<title></title>
   	</head>
 
@@ -27,8 +27,8 @@
 				}
 		</style>
 	    <header>
-	
-			<div id="sidebar1" align="center">
+	    	
+	    	<div id="sidebar1" align="center">
 	
 			  		<nav>
 				    		<ul>
@@ -41,8 +41,8 @@
 		<div id="container"></div>
 			
 	
-	    <div id="Footer" align="center" style="position:fixed;bottom:0px; width:100%">
-	
+	    <div id="Footer" align="center" style="position:fixed;bottom:0px; width:100%;">
+			 
 		    <div class="footerUp">
 				<footer>
 				    <p>&copy;{{ year }} Junhao "Freddie" Zhang, all the rights reserved</p>
