--- a/templates/HomePage/chmod755+/home.html
+++ b/templates/HomePage/chmod755+/home.html
@@ -13,7 +13,7 @@
 				
 				<!-- End of First -->
 				
-				<!-- Second Section -->
+				<!-- Third Section -->
 				
 				<div id="HomeBotPic">
 						<div id="siderBar_Pic" align="center">
@@ -44,8 +44,9 @@
 					
 				</div>
 				
-				<!-- End of Second -->
+				<!-- End of Third -->
+				
 			</div>
 			
 			<script src="/static/HomePage/js/Plugin/spin.js"></script> 
-			<script type="text/javascript" src="/static/HomePage/js/homePics.js"></script> 
+			<script type="text/javascript" src="/static/HomePage/js/rollingPics.js"></script> 
