--- a/static/HomePage/css/mystyle.css
+++ b/static/HomePage/css/mystyle.css
@@ -62,7 +62,7 @@ nav ul{
 	padding:0px;
 	background-color:black;
 	width:100%;
-    height:100%;
+    height:100vh;
 }
 
 #siderBar_Pic{
@@ -70,7 +70,7 @@ nav ul{
 	float:left;
 	padding:0px;
 	width:18%;
-    height:100%;
+    height:100vh;
 	position:relative;
 	background-color:black;
 	overflow:scroll;
@@ -119,6 +119,7 @@ nav ul{
 	
 	background:black;
 	width:82%;
+	height:100vh;
 	position:absolute;
 	float:right;
 	/*margin:10px 0px 0px 0px;*/
