--- a/templates/HomePage/chmod755+/home.html
+++ b/templates/HomePage/chmod755+/home.html
@@ -1,8 +1,4 @@
-			<video id="homeVideo" loop autoplay muted style="width:100%;position:fixed;background-size:cover;z-index:-1" >
-				<source style="z-index:-1" src="/static/media/{{ HomeVideo }}" type="video/mp4">
-			</video>
-			
-			<div id="Sections">
+
 			
 				<!-- First Section -->
 				<article id="article" class="HomeStyle" align="center">
@@ -12,41 +8,9 @@
 				</article>
 				
 				<!-- End of First -->
-				
-				<!-- Third Section -->
-				
-				<div id="HomeBotPic">
-						<div id="siderBar_Pic" align="center">
-							<h1>Photo Albums ({{ pics.count }})</h1>
-							<div>	
-								<nav>					    
-									<ul>{% for x in pics %}
-					        				<li><a alt="{{ x.Album_Url }}">
+				<script type="text/javascript">
+					$("#article").css("padding-top", ($(window).height()-500)/2);
+					$("#article").css("padding-bottom", ($(window).height()-500)/2);
+				</script>
 
-					        				<img style="width:88%; height:auto; " src="/static/media/{{ x.Photo_Album_Cover }}">
-					        				<p style="color:white;font-size:24px;text-decoration:none;">{{ x.name }}</p>
-					        				
-					        				</a></li>
-					   					{% endfor %}
-					   				
-					   					<a href="#" id="back-to-top" title="Back to top"><h2 style="padding:0px 0px 50px 0px;">&uarr; Back to top</h2></a>
-					   					
-					   				</ul>
-				   				</nav>
-			   				</div>
-						</div>
-					<div id="Spin" style="width:50px;height:50px;padding:0px;"></div>
-					<div style="position:absolute;left:23%;top:30%;paddinig:0px;height:30px;width:30px;z-index:10;"><a id="leftArrow"><img alt="" src="/static/media/{{ lAr }}"></a></div>
-					<div style="position:absolute;right:11%;top:30%;paddinig:0px;height:30px;width:30px;z-index:10;"><a id="righArrow"><img alt="" src="/static/media/{{ rAr }}"></a></div>
-					<div id="dispPic">
-					
-					</div>
-					
-				</div>
-				
-				<!-- End of Third -->
-				
-			</div>
 			
-			<script src="/static/HomePage/js/Plugin/spin.js"></script> 
-			<script type="text/javascript" src="/static/HomePage/js/rollingPics.js"></script> 
