--- a/templates/HomePage/Home.html
+++ b/templates/HomePage/Home.html
@@ -1,49 +1,14 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		{% load staticfiles %}
-   		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="{% static 'HomePage/css/mystyle.css' %}">		
-		<script src="{% static 'HomePage/js/Plugin/jQuery.js' %}"></script> 		
-		<script src="{% static 'HomePage/js/Plugin/headroom.js' %}"></script> 
-		<script src="{% static 'HomePage/js/Plugin/jQuery.headroom.js' %}"></script> 
-		<script type="text/javascript" src="{% static 'HomePage/js/keyableSideBar.js' %}"></script> 
-		<title></title>
-  	</head>
-
-    <body>
-	    <style type="text/css">
-			body {
-					font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-					width: 100%; 
-					margin: 0;
-					padding: 0;
-					color: #000;
-					display:block;
-					background-position:top;
-					background-image:url(/static/media/{{ bgp }});
-					background-repeat:no-repeat;
-					background-size:cover;
-				}
-		</style>
-	    <header>
-	    	
-	    	<div id="sidebar1" align="center">
+<html>	
+	{% include "HomePage/sites/head.html" %}
 	
-			  		<nav>
-				    		<ul>
-					      		<li><a alt="home.html">Home</a></li>
-					      		<li><a alt="PhotoAlbums.html" id="sel">Photo Albums</a></li>
-				    		</ul>
-			    	</nav>
-			 </div>
-		</header>
+    <body>
+
+		{% include "HomePage/sites/header.html" %}
 	
 		<div id="container">
 		
-			<video id="homeVideo" loop autoplay muted style="width:100%;position:fixed;background-size:cover;z-index:-1" >
-				<source style="z-index:-1" src="/static/media/{{ HomeVideo }}" type="video/mp4">
-			</video>
+			{% include "HomePage/sites/bg.html" %}
 			
 			<div id="Sections">
 			
@@ -51,14 +16,8 @@
 		</div>
 			
 	
-	    <div id="Footer" align="center" style="position:fixed;bottom:0px; width:100%;">
-			 
-		    <div class="footerUp">
-				<footer>
-				    <p>&copy;{{ year }} Junhao "Freddie" Zhang, all the rights reserved</p>
-				</footer>
-		    </div>
-		</div>
+		{% include "HomePage/sites/footer.html" %}
+		
 	</body>
 	   	
 </html>
