--- a/templates/others/About/Second.html
+++ b/templates/others/About/Second.html
@@ -13,9 +13,9 @@
 </div>
 
 <div id="AboutBee">
-	<img src="{% static 'HomePage/img/marvel.jpeg' %}">
+	<img src="{% static 'Page/img/marvel.jpeg' %}">
 </div>
 						
 <div id="AboutPics">
-	<img src="{% static 'HomePage/img/marvel.jpeg' %}">
+	<img src="{% static 'Page/img/marvel.jpeg' %}">
 </div>
