--- a/templates/others/About/Third.html
+++ b/templates/others/About/Third.html
@@ -3,7 +3,7 @@
 
 <div class="botTop">
 
-	<img src="{% static 'HomePage/img/marvel.jpeg' %}">
+	<img src="{% static 'Page/img/marvel.jpeg' %}">
 	
 	<span>test</span>
 	<span style="color:gray;">test</span>
