combined 'Project.html' and 'Comments.html' into there

--- a/templates/sites/head.html
+++ b/templates/sites/head.html
@@ -13,6 +13,10 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'Page/css/myAboutstyle.css' %}">	
 		<!-- End 'for the About.html' -->
 		
+		<!-- For the Projects.html -->
+		<link rel="stylesheet" type="text/css" href="{% static 'Page/css/Projects.css' %}">	
+		<!-- End 'for the Projects.html' -->
+		
 		<script src="{% static 'Page/js/Plugin/jQuery.js' %}"></script> 		
 		<script src="{% static 'Page/js/Plugin/headroom.js' %}"></script> 
 		<script src="{% static 'Page/js/Plugin/jQuery.headroom.js' %}"></script> 
