--- a/templates/sites/header.html
+++ b/templates/sites/header.html
@@ -21,7 +21,9 @@
 				    		<ul>
 					      		<li><a alt="home.html">Home</a></li>
 					      		<li><a alt="About.html">About</a></li>
+					      		<li><a alt="Projects.html">Projects</a></li>
 					      		<li><a alt="PhotoAlbums.html">Photo Albums</a></li>
+					      		<li><a alt="Comment.html">Leave Comments</a></li>
 				    		</ul>
 			    	</nav>
 			 </div>
