--- a/templates/chmod755+/About.html
+++ b/templates/chmod755+/About.html
@@ -29,6 +29,6 @@
 <!-- End of Fifth-->
 				
 <script type="text/javascript" src="{% static 'Page/js/adjust.js' %}"></script> 	
-<script type="text/javascript" src="{% static 'Page/js/home.js' %}"></script> 
+<script type="text/javascript" src="{% static 'Page/js/About/home.js' %}"></script> 
 <script type="text/javascript" src="{% static 'Page/js/PathBar.js' %}"></script> 
 				
