--- a/templates/chmod755+/Projects.html
+++ b/templates/chmod755+/Projects.html
@@ -1,4 +1,4 @@
-s		<div class="placeholder LeftDiv"></div>	
+		<div class="placeholder LeftDiv"></div>	
 		<div class="container">
 
 		{% include "others/PathBar.html" %}	
@@ -77,7 +77,5 @@ s		<div class="placeholder LeftDiv"></div>
 
 		<div>
 		
-<script type="text/javascript" src="/static/Page/js/adjust.js"></script>
 <script type="text/javascript" src="/static/Page/js/PathBar.js"></script> 
-<script type="text/javascript" src="/static/Page/js/Comment/ajax.js"></script> 
 <script type="text/javascript" src="/static/Page/js/Comment/about.js"></script> 
