cleaned Comments.html TopTinyBar overlap siderbar1

--- a/templates/chmod755+/Projects.html
+++ b/templates/chmod755+/Projects.html
@@ -77,5 +77,6 @@
 
 		<div>
 		
+<script type="text/javascript" src="/static/Page/js/adjust.js"></script>
 <script type="text/javascript" src="/static/Page/js/PathBar.js"></script> 
 <script type="text/javascript" src="/static/Page/js/Comment/about.js"></script> 
