--- a/templates/chmod755+/Comment.html
+++ b/templates/chmod755+/Comment.html
@@ -24,5 +24,6 @@
 		</div>
 </div>
 		
+<script type="text/javascript" src="/static/Page/js/adjust.js"></script>
 <script type="text/javascript" src="/static/Page/js/PathBar.js"></script> 
 <script type="text/javascript" src="/static/Page/js/Comment/about.js"></script> 
