--- a/templates/chmod755+/Comment.html
+++ b/templates/chmod755+/Comment.html
@@ -11,7 +11,8 @@
 			<h1>公司简介</h1>
 			<nav>
 				<ul>
-					<li><a href=#><span>Test</span></a></li>
+					<li><a href=#><span>Project Test 1</span></a></li>
+					<li><a href=#><span>Project Test 2</span></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -25,5 +26,11 @@
 </div>
 		
 <script type="text/javascript" src="/static/Page/js/adjust.js"></script>
-<script type="text/javascript" src="/static/Page/js/PathBar.js"></script> 
+<!-- Secondary Nav Bar Setup -->
 <script type="text/javascript" src="/static/Page/js/Comment/about.js"></script> 
+
+<!-- Secondary Nav Bar Ajax -->
+<script type="text/javascript" src="/static/Page/js/Comment/ajax.js"></script> 
+
+
+<script type="text/javascript" src="/static/Page/js/PathBar.js"></script> 
