--- a/templates/chmod755+/Projects.html
+++ b/templates/chmod755+/Projects.html
@@ -8,7 +8,8 @@
 					<h1>诚招英才</h1>
 					<nav>
 						<ul>
-							<li><a href=#><span>Test</span></a></li>
+					<li><a href=#><span>Project Test 1</span></a></li>
+					<li><a href=#><span>Project Test 2</span></a></li>
 						</ul>
 					</nav>
 				</div>
@@ -79,4 +80,9 @@
 		
 <script type="text/javascript" src="/static/Page/js/adjust.js"></script>
 <script type="text/javascript" src="/static/Page/js/PathBar.js"></script> 
+
+<!-- Secondary Nav Bar Setup -->
 <script type="text/javascript" src="/static/Page/js/Comment/about.js"></script> 
+
+<!-- Secondary Nav Bar Ajax -->
+<script type="text/javascript" src="/static/Page/js/Comment/ajax.js"></script> 
