--- a/templates/others/About/First.html
+++ b/templates/others/About/First.html
@@ -11,7 +11,7 @@
 
 					<div id="dljdLOGO" style="z-index:0;">
 					
-						<img src="{% static 'Page/img/marvel.jpeg' %}">
+						<img src="{% static 'Page/img/HomeFirstTop.png' %}">
 					
 					</div>
 
