--- a/templates/chmod755+/About.html
+++ b/templates/chmod755+/About.html
@@ -24,7 +24,7 @@
 <!-- End of Forth-->	
 
 <!-- Fifth Section (Contact) -->
-<div id="Contactus" style="background:#f6fecc;padding:30px 10px 30px 100px; height:40vh">
+<div id="Contactus" style="background:#f6fecc;padding:30px 10px 30px 100px; min-height:90vh; overflow:auto">
 	{% include "others/About/Fifth.html" %}
 </div>
 <!-- End of Fifth-->
