--- a/templates/others/About/Second.html
+++ b/templates/others/About/Second.html
@@ -3,19 +3,19 @@
 
 						
 <div id="aboutText" align="center">
-	<li id="about1"><span>test</span></li>
-	<li id="about2"><span>test</span></li>
+	<li id="about1"><span>{{ secondText.first_text }}</span></li>
+	<li id="about2"><span>{{ secondText.second_text }}</span></li>
 
-	<a href="templates/sites/about.php" style="text-decoration:none;">
-		<li id="about3"><span>test</span></li>
+	<a href="#Projects" style="text-decoration:none;">
+		<li id="about3"><span>{{ secondText.thrid_text }}</span></li>
 	</a>
 
 </div>
 
 <div id="AboutBee">
-	<img src="{% static 'Page/img/marvel.jpeg' %}">
+	<img src="/static/media/{{ secondText.Second_Left }}">
 </div>
 						
 <div id="AboutPics">
-	<img src="{% static 'Page/img/marvel.jpeg' %}">
+	<img src="/static/media/{{ secondText.Second_Right }}">
 </div>
