--- a/static/Page/css/homeThirdForm.css
+++ b/static/Page/css/homeThirdForm.css
@@ -1,12 +1,10 @@
 #HomeThirdForm{
 
 	position: relative;
-
 	width:100%;
-
 	height:40vh;
 	overflow: hidden;
-	background: white;
+	background-color:blue;
 
 }
 
