Home and PhotoAlbum

--- a/templates/chmod755+/PhotoAlbums.html
+++ b/templates/chmod755+/PhotoAlbums.html
@@ -2,7 +2,7 @@
 				
 				<!-- Third Section -->
 				
-				<div id="HomeBotPic" style="padding-bottom:10px">
+				<div id="HomeBotPic">
 						<div id="siderBar_Pic" align="center">
 							<h1>Photo Albums ({{ pics.count }})</h1>
 							<div>	
