--- a/templates/chmod755+/home.html
+++ b/templates/chmod755+/home.html
@@ -1,23 +1,19 @@
 
 			
 				<!-- First Section -->
-				<article id="article" class="HomeStyle" align="center">
-					<div style="z-index:0; background:none">
-						<img src="/static/media/{{ HomeLogo }}">
-					</div>
-				</article>
+				<div id="sec1" style="z-index:0; background:black; width:100%; height:100vh;" class="article HomeStyle" align="center">
+					<img style="width:60%; height:auto;" src="/static/media/{{ HomeLogo }}">
+				</div>
 				
-				<article id="article" class="HomeStyle" align="center">
-					<div style="z-index:0; background:none">
-						<img src="/static/media/{{ HomeLogo }}">
+				<div id="sec2" style="z-index:0; background:white; width:100%; height:100vh;" class="article HomeStyle" align="center">
+					<div style="background:yellow; width:100px; height:100px; position:relative;">
+					
 					</div>
-				</article>
+				</div>
 				
-				<article id="article" class="HomeStyle" align="center">
-					<div style="z-index:0; background:none">
-						<img src="/static/media/{{ HomeLogo }}">
-					</div>
-				</article>
+				<div id="sec3" style="z-index:0; background:red; width:100%; height:100vh;" class="article HomeStyle" align="center">
+					<img style="width:60%; height:auto;" src="/static/media/{{ HomeLogo }}">
+				</div>
 				
 				<a href="#" id="back-to-top-Home" style="position:fixed;left: 20px;bottom: 60px; padding: 0; text-align: center;">
 					<div style="margin-top: 20px; padding:10px 80px 10px 80px; background: orange; position:relative; float:right; border-style: solid;	border-color: gray;" align=center>
@@ -34,18 +30,22 @@
 				<!-- a href="#" id="back-to-bot-Home" title="Back to top"><h2 style="padding:0px 0px 50px 0px;">&uarr; Back to top</h2></a-->
 				<!-- End of First -->
 				<script type="text/javascript">
-					$(".HomeStyle").css("padding-top", ($(window).height()-$("#article div img").outerHeight())/2);
-					$(".HomeStyle").css("padding-bottom", ($(window).height()-$("#article div img").outerHeight())/2);
-					
-					//fade in/out while scrolling screen-wide	
-					$(window).scroll(function(e) {
-					
-						$("#Sections").css("opacity",Math.abs(Math.cos(($(window).scrollTop()%(2*$(window).height()))/$(window).height()*Math.PI)));
-				
-					});	
 		
 					$(document).ready(function(){
 					
+							$("#sec1 img").css("margin-top", ($("#sec1").height()-$("#sec1 img").outerHeight())/2);
+					
+							$("#sec2 div").css("top", ($("#sec2").height()-$("#sec2 div").outerHeight())/2);
+							
+							$("#sec3 img").css("margin-top", ($("#sec3").height()-$("#sec3 img").outerHeight())/2);
+		
+							//fade in/out while scrolling screen-wide	
+							$(window).scroll(function(e) {
+							
+								$("#Sections").css("opacity",Math.abs(Math.cos(($(window).scrollTop()%(2*$(window).height()))/$(window).height()*Math.PI)));
+						
+							});	
+							
 						    $('#back-to-top-Home').on('click', function (e) {
 						        e.preventDefault();
 						        if($(window).scrollTop()%$(window).height() === 0)
