--- a/templates/chmod755+/home.html
+++ b/templates/chmod755+/home.html
@@ -1,18 +1,49 @@
-
-			
+		
 				<!-- First Section -->
-				<div id="sec1" style="z-index:0; background:black; width:100%; height:100vh;" class="article HomeStyle" align="center">
+				<div id="sec1" style="z-index:0; background:black; width:100%; height:100vh;" class="article" align="center">
 					<img style="width:60%; height:auto;" src="/static/media/{{ HomeLogo }}">
 				</div>
 				
-				<div id="sec2" style="z-index:0; background:white; width:100%; height:100vh;" class="article HomeStyle" align="center">
-					<div style="background:yellow; width:100px; height:100px; position:relative;">
+				<div id="sec2" style="z-index:0; background:white; width:100%; height:100vh;" class="article" align="center">
+					<table style="background:yellow; width:70%;height:auto; position:relative;margin: 0 auto;">
+						<tr>
+							<td>
+								<div class="ContactIcons" align=center style="background:orange; position:relative;">
+									<nav> <!-- Vertical -->
+										<ul>
+											<li><a><img style="width:25vh; height:25vh;" src="/static/media/{{ HomeLogo }}""></a></li>	
+											<li><a><span style="font-size:60px">first_text</span></a></li>	
+											<li><a><span style="font-size:40px">second_textsecond_textsecond_text</span></a></li>
+											<li><a><span>Contact me</span></a></li>		
+											<nav class="Horizontalnav"> <!-- Horizontal -->
+												<ul>
+													<li><a href="#" alt="#"><img src="/static/media/{{ HomeLogo }}"></a></li>															
+												</ul>
+											</nav>
+									
+											<li><a><span>&uarr; Find out how</span></a></li>	
+											<li><a><span>Contact me</span></a></li>																
+										</ul>
+									</nav>
+								
+								</div>
+							</td>
+							<td>
+								<div class="RightDivTable" style=" background:black;" align="center">
+									<img style="width:100vh; height:70vh;" src="/static/media/{{ HomeLogo }}"">
+								</div>
+							</td>
+						</tr>
+					</table>					
+				</div>
+				
+				<div id="sec3" style="z-index:0; background:red; width:100%; height:100vh;" class="article" align="center">
+				<!-- Playerlist id -->
+					<iframe width="60%" height="60%" src="https://www.youtube.com/embed/bhzasigpf3Q?list=PL4m8kzZrBUKpWRXE6kCWPhq904-q-R96O?ecver=1" frameborder="0" allowfullscreen></iframe>
 					
-					</div>
-				</div>
-				
-				<div id="sec3" style="z-index:0; background:red; width:100%; height:100vh;" class="article HomeStyle" align="center">
-					<img style="width:60%; height:auto;" src="/static/media/{{ HomeLogo }}">
+				<!-- Video id -->
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/F3U9WogSVsQ?ecver=1" frameborder="0" allowfullscreen></iframe>
+					<!-- iframe width="560" height="315" src="https://www.youtube.com/embed/Video Id?ecver=1" frameborder="0" allowfullscreen></iframe-->
 				</div>
 				
 				<a href="#" id="back-to-top-Home" style="position:fixed;left: 20px;bottom: 60px; padding: 0; text-align: center;">
@@ -33,11 +64,14 @@
 		
 					$(document).ready(function(){
 					
+							var error = 100;
+							var error_time = 50;
+					
 							$("#sec1 img").css("margin-top", ($("#sec1").height()-$("#sec1 img").outerHeight())/2);
 					
-							$("#sec2 div").css("top", ($("#sec2").height()-$("#sec2 div").outerHeight())/2);
+							$("#sec2 table").css("top", ($("#sec2").height()-$("#sec2 table").outerHeight())/2);
 							
-							$("#sec3 img").css("margin-top", ($("#sec3").height()-$("#sec3 img").outerHeight())/2);
+							$("#sec3 iframe").css("margin-top", ($("#sec3").height()-$("#sec3 iframe").outerHeight())/2);
 		
 							//fade in/out while scrolling screen-wide	
 							$(window).scroll(function(e) {
@@ -52,6 +86,10 @@
 						        {
 						        	$('html, body').animate({ scrollTop: $(window).scrollTop() - $(window).height() }, 1500);
 						        }
+						        else if($(window).scrollTop()%$(window).height() < error)
+						        {
+						        	$('html, body').animate({ scrollTop: $(window).scrollTop() - error }, error_time);
+						        }
 						        else
 						        {
 						        	$('html, body').animate({ scrollTop: $(window).scrollTop() - $(window).scrollTop()%$(window).height() }, 1500);
@@ -63,6 +101,11 @@
 						        if($(window).scrollTop()%$(window).height() === 0)
 						        {
 						        	$('html, body').animate({ scrollTop: $(window).scrollTop() + $(window).height() }, 1500);
+						        	
+						        }
+						      	else if($(window).height() - $(window).scrollTop()%$(window).height() < error)
+						        {
+						        	$('html, body').animate({ scrollTop: $(window).scrollTop() + error }, error_time);
 						        }
 						        else
 						        {
