--- a/static/Page/css/mystyle.css
+++ b/static/Page/css/mystyle.css
@@ -78,6 +78,9 @@ nav ul{
 .article{
 	text-align:center;
 	position:relative;
+	z-index:0;
+	width:100%; 
+	height:100vh;
 	
 }
 
@@ -85,6 +88,18 @@ nav ul{
 	display:block;
 	
 }
+
+DIV.ctn {
+    min-height: 150px;
+    min-width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    display: table-cell;
+    vertical-align: middle;
+    
+    height:100vh;
+}
+
 
 #HomeBotPic{
 	position:absolute;
@@ -142,6 +157,56 @@ nav ul{
 #siderBar_Pic h1{
 	color:white;
 	padding:10px 0px 0px 0px;
+}
+
+#youtubePlayList{
+	
+	padding:0px;
+	position:relative;
+	background-color:black;
+	overflow-y:scroll;
+	direction:rtl; 
+}
+
+#youtubePlayList div nav ul{
+
+	padding:0px;
+	margin:0px;
+	list-style:none;
+	
+}
+	
+#youtubePlayList div nav ul li{
+	
+	display:block;
+	padding:5px 0px 0px 0px;
+	margin:0px 0px 0px 10px;
+	color:white;
+	
+}
+
+#youtubePlayList div nav ul li a{
+
+	padding:0px;
+	
+}
+#youtubePlayList div nav ul li a img{
+
+	padding:0px;
+	
+}
+
+#youtubePlayList div nav ul li a p{
+	
+	padding:0px;
+	
+}
+
+#youtubeVideoPool{
+	
+	background:black;
+	position:relative;
+	/*margin:10px 0px 0px 0px;*/
 }
 
 #dispPic{
